# firehooks

./: .gitreview  .zuul.yaml  CHANGELOG  firehooks.service  firehooks.spec  requirements.txt  setup.cfg  tox.ini
etc/: default.yaml
firehooks/: config.py  firehooks.py
firehooks/hooks/: base.py  trackers.py  zuul.py
firehooks/softwarefactory/: __init__.py
firehooks/tests/: test_basic.py  test_hooks.py
