[metadata]
name = firehooks
summary = Firehooks, a Software Factory or OpenStack-style Firehose consumer used to trigger complex actions on specific events
description-file = README.md
author = Matthieu Huin
author-email = softwarefactory-dev@redhat.com
home-page = http://softwarefactory-project.io
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = firehooks

[entry_points]
console_scripts =
    firehooks = firehooks.firehooks:main
